syntax = "proto3";

package MutEx;

option go_package = "/MutEx";

service MutexService {
    rpc RequestAccess (RequestMessage) returns (ReplyMessage);
    rpc Release (ReleaseMessage) returns (Empty);
}

message RequestMessage {
    int32 node_id = 1;
    int64 timestamp = 2;
}

message ReplyMessage {
    bool granted = 1;
    int64 timestamp = 2;
}

message ReleaseMessage {
    int32 node_id = 1;
    int64 timestamp = 2;
}

message Empty {}